--- a/index.html
+++ b/index.html
@@ -99,5 +99,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- CRITICAL: This script tag connects the React App to the HTML. -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
