--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Прокуратура Штата Houston | Majestic RP</title>
     
-    <!-- CRITICAL FIX: Polyfill for process.env to prevent white screen crash on Vercel/GitHub Pages -->
+    <!-- FIX: Robust Polyfill for process.env to prevent crashes in browser environments -->
     <script>
-      if (typeof process === 'undefined') {
-        window.process = { env: { API_KEY: '' } };
-      }
+      window.process = window.process || {};
+      window.process.env = window.process.env || {};
+      if (!window.process.env.API_KEY) window.process.env.API_KEY = '';
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -85,21 +85,9 @@
         -webkit-backdrop-filter: blur(10px);
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
-  }
-}
-</script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
-    <!-- CRITICAL: This script tag connects the React App to the HTML. -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
